--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Пример сайта</title>
+  <title>линки</title>
   <style>
     body {
       background-color: black;
