--- a/index.html
+++ b/index.html
@@ -75,5 +75,7 @@
   </div>
 <br>
   <button id="home-button" class="button hidden" onclick="location.href='https://hwsata.github.io/mew';">На главную</button>
+<br>
+  <p><a href="test.html">test</a></p>
 </body>
 </html>
