--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>test</h1>
+    <p><a href="https://clck.ru/367vNq">Герои 3</a></p>
     <p>mew</p>
     <p><a href="index.html">На главную</a></p>
 </body>
