--- a/test.html
+++ b/test.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>Gaming Links</title>
 </head>
 <body>
-    <h1>test</h1>
+    <h2>Gaming Links</h2>
     <p><a href="https://clck.ru/367vNq">Герои 3</a></p>
-    <p>mew</p>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="https://disk.yandex.ru/d/MO9VzYSdEX4huw">Half-Life 1</a></p>
+    <br>
+    <p><a href="index.html">ВЕРНУТЬСЯ НА ГЛАВНУЮ</a></p>
 </body>
 </html>
