--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 <br>
   <button id="home-button" class="button hidden" onclick="location.href='https://hwsata.github.io/mew';">На главную</button>
 <br>
-  <p><a href="test.html">test</a></p>
+  <p><a href="test.html">GL</a></p>
 </body>
 </html>
